test/corpus/cons.txt
===
Cons
===

[]
[:a 1]
[:a 1 :b 2]
[parent]
[parent1 parent2 :a 1 :b 2]

---

(source
  (cons)
  (cons
	(keyword
	  (symbol))
	(number))
  (cons
	(keyword
	  (symbol))
	(number)
	(keyword
	  (symbol))
	(number))
  (cons
	(symbol))
  (cons
	(symbol)
	(number)
	(symbol)
	(number)
	(keyword
	  (symbol))
	(number)
	(keyword
	  (symbol))
	(number)))
