test/corpus/paths.txt
===
Paths
===

.cmd
/file
./file
../file
/dir/
./dir/
../dir/
./sub/file
./sub/dir/

---

(source
  (module_path
	(module)
	(module))
  (path)
  (path)
  (path)
  (path)
  (path)
  (path)
  (path)
  (path))
